--- a/public/mensaje.html
+++ b/public/mensaje.html
@@ -113,6 +113,9 @@
                 </div>
             </div>
         </div>
+                <footer>
+            <p><a style="text-decoration: none; color: #000; font-family: 'Courier New', Courier, monospace;" href="https://xnviews.github.io/sn/" target="_blank">Dedicalo a otra persona(click aqui)</a></p>
+        </footer>
     </main>
     
     <script>
